# enoki

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
docs/: advanced.rst  array.rst  autodiff.rst  basics.rst  benchmark.rst  calls.rst  changelog.rst  color.rst  complex.rst  conf.py  cuda.rst  custom.rst  demo.rst  dynamic.rst  gpu.rst  half.rst  homogeneous.rst  index.rst  intro.rst  matrix.rst  morton.rst  nested.rst  operations.rst  python.rst  quaternions.rst  random.rst  reference.rst  sh.rst  stl.rst  transform.rst  type_traits.rst
docs/_static/: theme_overrides.css
include/enoki/: alloc.h  array.h  array_avx.h  array_avx2.h  array_avx512.h  array_base.h  array_call.h  array_dynamic.h  array_enum.h  array_fallbacks.h  array_generic.h  array_idiv.h  array_intrin.h  array_kmask.h  array_macro.h  array_masked.h  array_math.h  array_misc.h  array_neon.h  array_recursive.h  array_round.h  array_router.h  array_sse42.h  array_static.h  array_struct.h  array_traits.h  array_utils.h  autodiff.h  color.h  common.h  complex.h  cuda.h  definitions.h  dynamic.h  fwd.h  half.h  homogeneous.h  matrix.h  morton.h  python.h  (+9 more)
resources/: FindMemkind.cmake  __init__.py  archflags_unix.cpp  check-style.sh  enoki_gdb.py  enoki_lldb.py
src/autodiff/: autodiff.cpp
src/cuda/: common.cu  common.cuh  horiz.cu  jit.cu  trace.cu
src/python/: autodiff_1d.cpp  autodiff_2d.cpp  autodiff_3d.cpp  autodiff_4d.cpp  autodiff_matrix_4d.cpp  common.h  complex.h  cuda.cpp  cuda_0d.cpp  cuda_1d.cpp  cuda_2d.cpp  cuda_3d.cpp  cuda_4d.cpp  cuda_autodiff.cpp  cuda_autodiff_0d.cpp  cuda_autodiff_1d.cpp  cuda_autodiff_2d.cpp  cuda_autodiff_3d.cpp  cuda_autodiff_4d.cpp  cuda_autodiff_complex.cpp  cuda_autodiff_matrix.cpp  cuda_autodiff_matrix_4d.cpp  cuda_complex.cpp  cuda_matrix.cpp  cuda_matrix_4d.cpp  cuda_pcg32.cpp  docstr.h  dynamic.cpp  dynamic_0d.cpp  dynamic_1d.cpp  dynamic_2d.cpp  dynamic_3d.cpp  dynamic_4d.cpp  dynamic_complex.cpp  dynamic_matrix.cpp  dynamic_matrix_4d.cpp  dynamic_pcg32.cpp  main.cpp  matrix.h  pcg32.cpp  (+13 more)
tests/: CMakeLists.txt  autodiff.cpp  basic.cpp  call.cpp  color.cpp  complex.cpp  conv.cpp  custom.cpp  dynamic.cpp  explog.cpp  float.cpp  histogram.cpp  horiz.cpp  hyperbolic.cpp  idiv.cpp  integer.cpp  memory.cpp  memory2.cpp  morton.cpp  nested.cpp  random.h  ray.h  sh.cpp  special.cpp  sphere.cpp  test.h  trig.cpp  vector.cpp
tests/python/: complex.cpp  test.cpp  test_pytorch.py  torch_test.cpp  torch_test.py
